<resources>
    <string name="app_name">MyBloodyApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_hint">الجوال</string>
    <string name="password_hint">كلمة المرور</string>
    <string name="enter">دخول</string>
    <string name="do_not_have_account_sign_up">لا تمتلك حساب ؟ يمكنك التسجيل من هنا</string>
    <string name="remember_me">تذكرني</string>
    <string name="do_you_forget_password">هل نسيت كلمة السر ؟</string>
    <string name="send">ارسال</string>
    <string name="verification_code">كود التحقق</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="change">تغيير</string>
    <string name="create_new_account">انشاء حساب جديد</string>
    <string name="register">تسجيل</string>
    <string name="name">الأسم</string>
    <string name="email">البريد الألكتروني</string>
    <string name="day_of_birth">تاريخ الميلاد</string>
    <string name="blood_type">فصيلة الدم</string>
    <string name="last_time_donation">أخر تاريخ للتبرع</string>
    <string name="governorate">المحافظة</string>
    <string name="select_city">المدينة</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="protection_hint">الوقاية</string>
    <string name="home_nav_search">ادخل كلمة البحث هنا</string>

    <string name="articles">المقالات</string>
    <string name="donation_request">طلبات التبرع</string>
    <string name="select_governorates">اختر المحافظة</string>
    <string name="select_blood_type">اختر فصيلة الدم</string>
    <string name="select_Category">اختر القسم</string>
    <string name="patient_name">اسم الحالة:</string>
    <string name="hospital">مستشفي:</string>
    <string name="city">المدينة:</string>
    <string name="one_donation_request">طلب تبرع</string>
    <string name="age">العمر</string>
    <string name="number_of_bags">عدد الاكياس</string>
    <string name="hospital_address">عنوان المستشفي</string>
    <string name="notes">ملاحظات</string>
    <string name="hospital_name">اسم المستشفي</string>
    <string name="favorite">المفضلة</string>
    <string name="select_location">اختيار الموقع</string>
    <string name="GPSAlertDialogTitle">location</string>
    <string name="GPSAlertDialogMessage">locationMessage</string>
    <string name="action_settings">setting</string>
    <string name="cancel">cancel</string>
    <string name="adding_request_is_done">تمت الاضافة بنجاح</string>
    <string name="hospital_al">المستشفي</string>
    <string name="address">العنوان</string>
    <string name="phone_numer">رقم الجوال</string>
    <string name="call">اتصال</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_profile_data">تعديل البيانات</string>
    <string name="edit">تعديل</string>
    <string name="notifications_settings">اعدادات الأشعارات</string>
    <string name="text_details">وريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعه بروشور او فلاير على سبيل المثال ... او نماذج مواقع انترنت ...</string>
    <string name="blood_types">فصائل الدم</string>
    <string name="governorates">المحافظات</string>
    <string name="save">حفظ</string>
    <string name="notifications">التنبيهات</string>
    <string name="start_save_people_by_donation">من فضلك ابدأ بانقاذ البشريه بالتبرع بالدم الأن</string>
    <string name="not_found_notification">لا يوجد اشعارات الان</string>
    <string name="donate">تبرع</string>
    <string name="more">المزيد</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="about_app">عن التطبيق</string>
    <string name="rate_app_on_play_store">تقييم التطبيق علي المتجر</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="mobile">الجوال</string>
    <string name="title_of_message">عنوان الرسالة</string>
    <string name="body_of_message">نص الرسالة</string>

</resources>
