<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkRed"
        android:orientation="horizontal">
        <TextView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/more"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingEnd="5dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_more_settings_favorite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Text_view_more_settings"
        android:drawableEnd="@drawable/favourite_icon"
        android:text="@string/favorite"
        />

    <TextView
        android:id="@+id/tv_more_settings_contact_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Text_view_more_settings"
        android:drawableEnd="@drawable/ic_mail_white"
        android:text="@string/contact_us"
        />

    <TextView
        android:id="@+id/tv_more_settings_about_app"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Text_view_more_settings"
        android:drawableEnd="@drawable/ic_light_bulb"
        android:text="@string/about_app"
        />

    <TextView
        android:id="@+id/tv_more_settings_rate_app"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Text_view_more_settings"
        android:drawableEnd="@drawable/ic_star_red"
        android:text="@string/rate_app_on_play_store"
        />

    <TextView
        android:id="@+id/tv_more_settings_notification_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Text_view_more_settings"
        android:drawableEnd="@drawable/ic_settings_red"
        android:text="@string/notifications_settings"

        />

    <TextView
        android:id="@+id/tv_more_settings_log_out"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/Text_view_more_settings"
        android:drawableEnd="@drawable/ic_arrow_back"
        android:text="@string/log_out"
        />

</LinearLayout>