<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:background="@mipmap/ic_blood_icon_foreground"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/et_login_fragment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeEditText_layout_height"
        android:hint="@string/phone_number_hint"
        style="@style/largeEditText"
        />

    <EditText
        android:id="@+id/et_login_fragment_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeEditText_layout_height"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/largeEditText_marginTop"
        style="@style/largeEditText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/txt_login_fragment_doYouForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_forget_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>


        <CheckBox
            android:id="@+id/checkBox_login_fragment"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:text="CheckBox"
            android:layout_marginStart="70dp"
            />

        <TextView
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/bu_login_fragment_login"
        android:layout_width="@dimen/smallButton_width"
        android:layout_height="@dimen/smallButton_height"
        android:layout_marginTop="10dp"
        android:text="@string/enter"
        style="@style/smallButton"
        />

    <Button
        android:id="@+id/bu_login_fragment_sign_up"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="75dp"
        android:text="@string/do_not_have_account_sign_up"
        android:textColor="@color/darkRed"
        />

</LinearLayout>