<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:background="@mipmap/ic_blood_icon_foreground" />

    <EditText
        android:id="@+id/et_forget_password_two_verification_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeEditText_layout_height"
        android:hint="@string/verification_code"
        android:layout_marginTop="@dimen/largeEditText_marginTop"
        style="@style/largeEditText"
        />

    <EditText
        android:id="@+id/et_forget_password_two_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeEditText_layout_height"
        android:hint="@string/new_password"
        android:layout_marginTop="@dimen/largeEditText_marginTop"
        style="@style/largeEditText"/>

    <EditText
        android:id="@+id/et_forget_password_two_renew_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeEditText_layout_height"
        android:hint="@string/confirm_new_password"
        android:layout_marginTop="@dimen/largeEditText_marginTop"
        style="@style/largeEditText"/>

    <Button
        android:id="@+id/bu_forget_fragment_two_change"
        android:layout_width="@dimen/smallButton_width"
        android:layout_height="@dimen/smallButton_height"
        android:layout_marginTop="20dp"
        android:text="@string/change"
        style="@style/smallButton"
         />
</LinearLayout>