<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_item_donation_home_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/white"
        >


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
        >

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true">


        <ImageButton
            android:id="@+id/bu_img_phone_call_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_call_red"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            />

        <ImageButton
            android:id="@+id/bu_img_info_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_info_red"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_control_click"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical"
         android:layout_marginStart="75dp"
         android:background="@drawable/linear_item_donation_text_container"
         android:layout_marginTop="5dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        >


        <TextView
            android:id="@+id/txt_donation_item_name_of_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="14sp"
             />

        <TextView
            android:id="@+id/txt_donation_item_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/patient_name"
            android:textSize="14sp"

           />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_hospital_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
        >

            <TextView
                android:id="@+id/txt_donation_item_name_of_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/txt_donation_item_hospital_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/hospital"
                android:textSize="14sp"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            >


            <TextView
                android:id="@+id/txt_donation_item_name_of_governorate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/txt_donation_item_governorate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/city"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:id="@+id/image_donation_blood_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_layout_blood_type"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="B+"
            android:textSize="30sp"
            />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>